--- a/index.html
+++ b/index.html
@@ -5,5 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
   </head>
-  <body></body>
+  <body>
+    <ul>
+      <li>
+        <a href="./recipes/casserole.html"
+          >Cheesy Ham and Has Brown Casserole</a
+        >
+      </li>
+      <li>
+        <a href="./recipes/cinnamon_rolls.html">Overnight Cinnamon Rolls</a>
+      </li>
+      <li>
+        <a href="./recipes/french_toast.html">Cinnamon French Toast Bake</a>
+      </li>
+    </ul>
+  </body>
 </html>
