Add home page link

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cheesy Ham and Has Brown Casserole</title>
   </head>
-  <body></body>
+  <body>
+    <a href="../index.html">Home</a>
+  </body>
 </html>
