--- a/recipes/french_toast.html
+++ b/recipes/french_toast.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cinnamon French Toast Bake</title>
   </head>
-  <body></body>
+  <body>
+    <a href="../index.html">Home</a>
+  </body>
 </html>
