Add content for casserola page

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -44,13 +44,34 @@
     <h2>Steps</h2>
     <ol>
       <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-      <li>Add enchilada sauce, salsa, Hatch chilies, lime juice, chili powder, cumin, oregano, and green onions to a bowl and whisk thoroughly.</li>
+      <li>
+        Add enchilada sauce, salsa, Hatch chilies, lime juice, chili powder,
+        cumin, oregano, and green onions to a bowl and whisk thoroughly.
+      </li>
       <li>Toss Monterey Jack and Cheddar cheeses together; set aside.</li>
-      <li>Transfer 1 ladle of sauce into the bottom of a 9x12-inch baking dish. Top with half the chips, arranging into an even layer. Ladle over half the remaining sauce. Top evenly with half the cheese mixture.</li>
-      <li>Top with remaining chips, arranging into an even layer. Ladle over remaining sauce. Top evenly with the remaining cheese mixture.</li>
-      <li>Bake in the preheated oven until the casserole is heated through and cheese is starting to brown, 20 to 25 minutes.</li>
-      <li>In the last few minutes of baking time, prepare the eggs by frying or poaching, or bake them on top of the casserole as shown in the video. See Chef's Note for directions.</li>
-      <li>Serve casserole hot, topped with avocado, queso fresco, cilantro, sour cream, and hot sauce. Add a fried or poached egg to the top of each serving.</li>
+      <li>
+        Transfer 1 ladle of sauce into the bottom of a 9x12-inch baking dish.
+        Top with half the chips, arranging into an even layer. Ladle over half
+        the remaining sauce. Top evenly with half the cheese mixture.
+      </li>
+      <li>
+        Top with remaining chips, arranging into an even layer. Ladle over
+        remaining sauce. Top evenly with the remaining cheese mixture.
+      </li>
+      <li>
+        Bake in the preheated oven until the casserole is heated through and
+        cheese is starting to brown, 20 to 25 minutes.
+      </li>
+      <li>
+        In the last few minutes of baking time, prepare the eggs by frying or
+        poaching, or bake them on top of the casserole as shown in the video.
+        See Chef's Note for directions.
+      </li>
+      <li>
+        Serve casserole hot, topped with avocado, queso fresco, cilantro, sour
+        cream, and hot sauce. Add a fried or poached egg to the top of each
+        serving.
+      </li>
     </ol>
   </body>
 </html>
