--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cheesy Ham and Has Brown Casserole</title>
+    <title>Chilaquiles Breakfast Casserole</title>
   </head>
   <body>
     <a href="../index.html">Home</a>
-    <h1>Cheesy Ham and Has Brown Casserole</h1>
+    <h1>Chilaquiles Breakfast Casserole</h1>
     <img
       src="https://www.allrecipes.com/thmb/sMtCxjGcLq1WY44kHHFE67Rnv5A=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8684756_Chilaquiles-Breakfast-Casserole_John-Mitzewich_4x3-0253b6d6684e49bb97e53665b73d531c.jpg"
       alt="cheesy ham and has brown casserole"
