Add content for cinnamon rolls page

--- a/recipes/cinnamon_rolls.html
+++ b/recipes/cinnamon_rolls.html
@@ -8,5 +8,77 @@
   <body>
     <a href="../index.html">Home</a>
     <h1>Overnight Cinnamon Rolls</h1>
+    <img
+      src="https://www.allrecipes.com/thmb/IK82lTbANjBN1M3lEJ0c0AGq71U=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/16250-overnight-cinnamon-rolls-i-VAT-Beauty-4x3-a0e468364a7542e9ad00acf44befc12e.jpg"
+      alt="cinnamon rolls"
+    />
+    <h2>Description</h2>
+    <p>
+      Make the night before, rolls rise in the fridge overnight, and bake fresh
+      the next morning for an easy and delicious breakfast treat. Enjoy!
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 cup milk</li>
+      <li>1/3 cup butter</li>
+      <li>1 (0.25 ounce) package active dry yeast</li>
+      <li>1/2 cup white sugar</li>
+      <li>4 1/2 cups all-purpose flour</li>
+      <li>1 teaspoon salt</li>
+      <li>3 large eggs</li>
+      <li>3/4 cup brown sugar</li>
+      <li>1 tablespoon ground cinnamon</li>
+      <li>1/2 cup raisins</li>
+      <li>1 teaspoon light corn syrup</li>
+      <li>1/2 teaspoon vanilla extract</li>
+      <li>1 1/4 cups sifted confectioners' sugar</li>
+      <li>2 tablespoons half-and-half cream</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Heat milk in a small saucepan over medium heat until bubbles form around
+        the edge, but do not let it boil. Remove from heat. Add butter and stir
+        until melted. Let cool until the mixture reaches 100 to 110 degrees F
+        (38 to 43 degrees C)—warm to the touch but not hot.
+      </li>
+      <li>
+        Pour cooled milk mixture into a large mixing bowl. Gently sprinkle yeast
+        over warm milk and let stand until dissolved and foamy, about 5 minutes.
+        Add sugar, 3 cups of flour, salt, and eggs; stir well to combine.
+        Gradually add remaining flour, 1/2 cup at a time, stirring well after
+        each addition. When dough has pulled together, turn it out onto a
+        lightly floured surface and knead until smooth and supple, about 8
+        minutes.
+      </li>
+      <li>
+        Lightly oil a large mixing bowl, place dough in bowl and turn to coat
+        with oil. Cover with a damp cloth and let rise in a warm place until
+        doubled in volume, about 1 hour.
+      </li>
+      <li>
+        Deflate dough and turn it out onto a lightly floured surface and roll
+        into a 10x14-inch rectangle. Lightly brush the far edge with water. In a
+        small bowl combine cinnamon and 3/4 cup brown sugar and sprinkle over
+        the rectangle. Then sprinkle raisins and chopped nuts over dough. Roll
+        up dough into a log and seal the seam.
+      </li>
+      <li>
+        Cut dough into 12 equal pieces; place the pieces in a greased 9x13-inch
+        baking pan, or 12-inch deep dish pizza pan. Cover with plastic wrap and
+        place in the refrigerator to rise overnight.
+      </li>
+      <li>
+        The next morning, preheat oven to 375 degrees F (190 degrees C). Take
+        rolls out of the refrigerator and let stand at room temperature for 30
+        minutes.
+      </li>
+      <li>
+        Bake rolls in the preheated oven for 25 to 30 minutes or until golden.
+        Meanwhile, combine corn syrup with vanilla in a small bowl. Whisk in
+        powdered sugar and enough cream to make a thick glaze; set aside.
+        Drizzle glaze over warm cinnamon rolls before serving.
+      </li>
+    </ol>
   </body>
 </html>
