--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <body>
     <ul>
       <li>
-        <a href="./recipes/casserole.html"
-          >Cheesy Ham and Has Brown Casserole</a
-        >
+        <a href="./recipes/casserole.html">Chilaquiles Breakfast Casserole</a>
       </li>
       <li>
         <a href="./recipes/cinnamon_rolls.html">Overnight Cinnamon Rolls</a>
