Add new divs to index page

--- a/index.html
+++ b/index.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <ul>
-      <li>
-        <a href="./recipes/casserole.html">Chilaquiles Breakfast Casserole</a>
-      </li>
-      <li>
-        <a href="./recipes/cinnamon_rolls.html">Overnight Cinnamon Rolls</a>
-      </li>
-      <li>
-        <a href="./recipes/french_toast.html">Cinnamon French Toast Bake</a>
-      </li>
-    </ul>
+    <div class="main">
+      <div class="header">
+        <h1>The Odin Recipes</h1>
+      </div>
+      <div class="list">
+        <ul>
+          <li>
+            <a href="./recipes/casserole.html"
+              >Chilaquiles Breakfast Casserole</a
+            >
+          </li>
+          <li>
+            <a href="./recipes/cinnamon_rolls.html">Overnight Cinnamon Rolls</a>
+          </li>
+          <li>
+            <a href="./recipes/french_toast.html">Cinnamon French Toast Bake</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
