Add class for ul item on main page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>The Odin Recipes</h1>
       </div>
       <div class="list">
-        <ul>
+        <ul class="main-list">
           <li>
             <a href="./recipes/casserole.html"
               >Chilaquiles Breakfast Casserole</a
