Add main html and div html for image

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -4,74 +4,80 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chilaquiles Breakfast Casserole</title>
+    <link rel="stylesheet" href="recipe_style.css" />
   </head>
   <body>
-    <a href="../index.html">Home</a>
-    <h1>Chilaquiles Breakfast Casserole</h1>
-    <img
-      src="https://www.allrecipes.com/thmb/sMtCxjGcLq1WY44kHHFE67Rnv5A=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8684756_Chilaquiles-Breakfast-Casserole_John-Mitzewich_4x3-0253b6d6684e49bb97e53665b73d531c.jpg"
-      alt="cheesy ham and has brown casserole"
-    />
-    <br />
-    <h2>Description</h2>
-    <p>
-      This chilaquiles breakfast casserole is made with layered tortilla chips,
-      baked in a spiced chile sauce and cheese. Topped with fried or poached
-      eggs, and plenty of delicious fixings, it's very satisfying. Traditional
-      chilaquiles are made in a skillet, but this casserole version is a great
-      way to serve a large group at breakfast or a brunch.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-      <li>1 (20 ounce) can red enchilada sauce</li>
-      <li>1 cup roasted tomato salsa</li>
-      <li>1/2 cup diced Hatch green chilies</li>
-      <li>1/2 lime, juiced</li>
-      <li>2 teaspoons chili powder</li>
-      <li>1 teaspoon ground cumin</li>
-      <li>1 teaspoon dried oregano</li>
-      <li>1/2 cup sliced green onions</li>
-      <li>8 to 10 cups thick-cut tortilla chips</li>
-      <li>4 ounces shredded Monterey Jack cheese</li>
-      <li>4 ounces shredded Cheddar cheese</li>
-      <li>6 large eggs</li>
-      <li>1 avocado — pitted, peeled, and diced</li>
-      <li>1/4 cup crumbled queso fresco cheese</li>
-      <li>1/4 cup chopped fresh cilantro leaves</li>
-      <li>Sour cream (optional)</li>
-      <li>Hot sauce (optional)</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-      <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-      <li>
-        Add enchilada sauce, salsa, Hatch chilies, lime juice, chili powder,
-        cumin, oregano, and green onions to a bowl and whisk thoroughly.
-      </li>
-      <li>Toss Monterey Jack and Cheddar cheeses together; set aside.</li>
-      <li>
-        Transfer 1 ladle of sauce into the bottom of a 9x12-inch baking dish.
-        Top with half the chips, arranging into an even layer. Ladle over half
-        the remaining sauce. Top evenly with half the cheese mixture.
-      </li>
-      <li>
-        Top with remaining chips, arranging into an even layer. Ladle over
-        remaining sauce. Top evenly with the remaining cheese mixture.
-      </li>
-      <li>
-        Bake in the preheated oven until the casserole is heated through and
-        cheese is starting to brown, 20 to 25 minutes.
-      </li>
-      <li>
-        In the last few minutes of baking time, prepare the eggs by frying or
-        poaching, or bake them on top of the casserole as shown in the video.
-        See Chef's Note for directions.
-      </li>
-      <li>
-        Serve casserole hot, topped with avocado, queso fresco, cilantro, sour
-        cream, and hot sauce. Add a fried or poached egg to the top of each
-        serving.
-      </li>
-    </ol>
+    <main>
+      <a href="../index.html">Home</a>
+      <h1>Chilaquiles Breakfast Casserole</h1>
+      <div class="image">
+        <img
+          src="https://www.allrecipes.com/thmb/sMtCxjGcLq1WY44kHHFE67Rnv5A=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8684756_Chilaquiles-Breakfast-Casserole_John-Mitzewich_4x3-0253b6d6684e49bb97e53665b73d531c.jpg"
+          alt="cheesy ham and has brown casserole"
+        />
+      </div>
+
+      <br />
+      <h2>Description</h2>
+      <p>
+        This chilaquiles breakfast casserole is made with layered tortilla
+        chips, baked in a spiced chile sauce and cheese. Topped with fried or
+        poached eggs, and plenty of delicious fixings, it's very satisfying.
+        Traditional chilaquiles are made in a skillet, but this casserole
+        version is a great way to serve a large group at breakfast or a brunch.
+      </p>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>1 (20 ounce) can red enchilada sauce</li>
+        <li>1 cup roasted tomato salsa</li>
+        <li>1/2 cup diced Hatch green chilies</li>
+        <li>1/2 lime, juiced</li>
+        <li>2 teaspoons chili powder</li>
+        <li>1 teaspoon ground cumin</li>
+        <li>1 teaspoon dried oregano</li>
+        <li>1/2 cup sliced green onions</li>
+        <li>8 to 10 cups thick-cut tortilla chips</li>
+        <li>4 ounces shredded Monterey Jack cheese</li>
+        <li>4 ounces shredded Cheddar cheese</li>
+        <li>6 large eggs</li>
+        <li>1 avocado — pitted, peeled, and diced</li>
+        <li>1/4 cup crumbled queso fresco cheese</li>
+        <li>1/4 cup chopped fresh cilantro leaves</li>
+        <li>Sour cream (optional)</li>
+        <li>Hot sauce (optional)</li>
+      </ul>
+      <h2>Steps</h2>
+      <ol>
+        <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+        <li>
+          Add enchilada sauce, salsa, Hatch chilies, lime juice, chili powder,
+          cumin, oregano, and green onions to a bowl and whisk thoroughly.
+        </li>
+        <li>Toss Monterey Jack and Cheddar cheeses together; set aside.</li>
+        <li>
+          Transfer 1 ladle of sauce into the bottom of a 9x12-inch baking dish.
+          Top with half the chips, arranging into an even layer. Ladle over half
+          the remaining sauce. Top evenly with half the cheese mixture.
+        </li>
+        <li>
+          Top with remaining chips, arranging into an even layer. Ladle over
+          remaining sauce. Top evenly with the remaining cheese mixture.
+        </li>
+        <li>
+          Bake in the preheated oven until the casserole is heated through and
+          cheese is starting to brown, 20 to 25 minutes.
+        </li>
+        <li>
+          In the last few minutes of baking time, prepare the eggs by frying or
+          poaching, or bake them on top of the casserole as shown in the video.
+          See Chef's Note for directions.
+        </li>
+        <li>
+          Serve casserole hot, topped with avocado, queso fresco, cilantro, sour
+          cream, and hot sauce. Add a fried or poached egg to the top of each
+          serving.
+        </li>
+      </ol>
+    </main>
   </body>
 </html>
